Add more pub data

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="nav">
-            <div id="select-grid">Grid</div>
+            <div id="select-grid" class="active">Grid</div>
             <div id="select-list">List</div>
             <div id="select-map">Map</div>
             <div>Form</div>
