--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,10 @@
         </div>
         <div id="tab-map" class="tab" style="display: none">
             <div id="map"></div>
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
         </div>
         <script type="module" src="map.ts"></script>
     </body>
