Link to Google form

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,13 @@
             <div id="select-list">List</div>
             <div id="select-map">Map</div>
             <div id="select-pub" style="display: none">Pub</div>
-            <div>Form</div>
+            <div id="form">Form</div>
+            <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSel2wM26PNbnHYUpSb3lBtW_BfHWHMaEjeLRfolaNirBt67iA/viewform?usp=sf_link"
+                target="_blank"
+                style="display: none"
+                id="formlink"
+            ></a>
         </div>
         <div id="tab-grid" class="tab">
             <div id="table-container" class="tab-scroll"></div>
