--- a/ui/index.html
+++ b/ui/index.html
@@ -79,9 +79,12 @@
                 <div>
                     <select id="pub-select">
                         <option value="0">Not visited</option>
-                        <option value="-1">-1 point</option>
-                        <option value="1">1 point</option>
-                        <option value="3">3 points</option>
+                        <option value="-1">Visited: -1</option>
+                        <option value="1">Visited: +1</option>
+                        <option value="3">Visited: +3</option>
+                        <option value="-2">Not visited: -1</option>
+                        <option value="2">Not visited: +1</option>
+                        <option value="4">Not visited: +3</option>
                     </select>
                 </div>
             </div>
