--- a/ui/index.html
+++ b/ui/index.html
@@ -55,7 +55,7 @@
                 </p>
 
                 <h2>3. Wait for message from Millie</h2>
-                <p>Millie will notify you how many points each pub was worth.</p>
+                <p>Millie will notify you if the pub was worth +3 or -1 (but not if +1) within approx 48 hours.</p>
 
                 <h2>4. Record the points for each pub</h2>
                 <p>
