Add section about first-visit bonus points to pub details page

--- a/ui/index.html
+++ b/ui/index.html
@@ -92,6 +92,9 @@
                 <h2>Form completion</h2>
                 <div class="info">Tick this box after you have submitted the Google form</div>
                 <input type="checkbox" id="pub-form-check" /> <label for="pub-form-check">Form submitted</label>
+
+                <h2>First visit</h2>
+                <div class="info" id="first-visit-text"></div>
             </div>
         </div>
         <script type="module" src="map.ts"></script>
