Add map layer for HBT unvisited pubs

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,6 +30,13 @@
             <div class="tab-scroll" id="list-container"></div>
         </div>
         <div id="tab-map" class="tab" style="display: none">
+            <div class="map-select-div">
+                <select id="map-select">
+                    <option value="my">My unvisited pubs</option>
+                    <option value="hbt">HBT maybe unvisited</option>
+                </select>
+                <span>Brown dots are unvisited</span>
+            </div>
             <div id="map"></div>
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
