Add score picker to pub page

--- a/ui/index.html
+++ b/ui/index.html
@@ -104,6 +104,19 @@
                 <div class="info">Tick this box after you have submitted the Google form</div>
                 <input type="checkbox" id="pub-form-check" /> <label for="pub-form-check">Form submitted</label>
 
+                <h2>Pub Score</h2>
+                <div class="info">This will be used to create aggregated statistics about HBT's favourite pubs</div>
+                <div>
+                    <select id="score-select">
+                        <option value="0">Unrated</option>
+                        <option value="1">1 - Very bad</option>
+                        <option value="2">2 - Bad</option>
+                        <option value="3">3 - Moderate</option>
+                        <option value="4">4 - Good</option>
+                        <option value="5">5 - Excellent</option>
+                    </select>
+                </div>
+
                 <h2>First visit</h2>
                 <div class="info" id="first-visit-text"></div>
             </div>
