--- a/ui/index.html
+++ b/ui/index.html
@@ -105,7 +105,10 @@
                 <input type="checkbox" id="pub-form-check" /> <label for="pub-form-check">Form submitted</label>
 
                 <h2>Pub Score</h2>
-                <div class="info">This will be used to create aggregated statistics about HBT's favourite pubs</div>
+                <div class="info">
+                    This will be used to create aggregated statistics about HBT's favourite pubs.
+                    <p>Consider the pub and beer rather than the points scored.</p>
+                </div>
                 <div>
                     <select id="score-select">
                         <option value="0">Unrated</option>
