Dynamically build map layer select

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,11 +31,8 @@
         </div>
         <div id="tab-map" class="tab" style="display: none">
             <div class="map-select-div">
-                <select id="map-select">
-                    <option value="my">My unvisited pubs</option>
-                    <option value="hbt">HBT maybe unvisited</option>
-                </select>
-                <span>Brown dots are unvisited</span>
+                <select id="map-select"></select>
+                <span id="map-select-desc"></span>
             </div>
             <div id="map"></div>
             <div id="popup" class="ol-popup">
